# LLM_chat_software

./: index.html  main.py  pyproject.toml  readme.txt  requirements.txt  settings-vllm-sample.yaml  settings-vllm.yaml
env/Scripts/: activate  activate.bat
